Ticket: # SubTicket: # Component: Changes: 1.Fixed a bug - navigation bar z-index is higher than loading modal.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/common.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/common.less
@@ -34,7 +34,7 @@
 @route-loadingindicator-z-index: 30000;
 @navbar-z-index: 30001;
 @view-show-hamburger-menu-btn-z-index: @view-hamburger-menu-z-index - 1;
-@view-hamburger-menu-z-index: 40000;
+@view-hamburger-menu-z-index: 22000;
 @grid-column-header-z-index: 1;
 @COLOR_PICKER_BUTTON_Z_INDEX: 102;
 //-------------------------
